--- a/packages/theme/src/date-picker.scss
+++ b/packages/theme/src/date-picker.scss
@@ -7,6 +7,8 @@
   --y-date-picker-border-color: var(--y-color-border);
   --y-date-picker-icon-color: var(--y-color-text-tertiary);
   --y-date-picker-bar-bg-color: var(--y-color-primary);
+  --y-date-picker-clear: var(--y-color-text-quaternary);
+  --y-date-picker-clear-hover: var(--y-color-text-tertiary);
 
   @include e(title) {
     position: relative;
@@ -47,6 +49,41 @@
       height: 2px;
       background-color: var(--y-date-picker-bar-bg-color);
       transition: 0.3s transform;
+    }
+  }
+
+  @include e(clear) {
+    margin-right: 8px;
+    position: relative;
+    display: inline-flex;
+    width: 10px;
+    height: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: var(--y-date-picker-clear);
+    font-size: 30px;
+  
+    &::before,
+    &::after {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 1px;
+      height: 50%;
+      content: '';
+      background-color: rgb(255 255 255 / 70%);
+    }
+  
+    &::before {
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
+  
+    &::after {
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+  
+    &:hover {
+      background-color: var(--y-date-picker-clear-hover);
     }
   }
 
