--- a/packages/theme/src/mixins/utils.scss
+++ b/packages/theme/src/mixins/utils.scss
@@ -105,12 +105,10 @@
   }
 }
 
-@mixin loading($width: 15px, $height: 15px) {
-  border: 2px solid var(--y-color-primary);
+@mixin loading() {
+  border: 1px solid var(--y-color-primary);
   border-bottom-color: transparent;
   border-radius: 50%;
-  width: $width;
-  height: $height;
   animation: loading 1s linear infinite;
   margin: 0 auto;
 }
