--- a/packages/theme/src/select.scss
+++ b/packages/theme/src/select.scss
@@ -25,8 +25,8 @@
 
   @include e(title) {
     padding: var(--y-select-padding-block) var(--y-select-padding-inline);
-    border: 1px solid var(--y-select-border-color);
     border-radius: 6px;
+    cursor: pointer;
 
     @include m(inner) {
       flex: 1;
@@ -34,6 +34,10 @@
       @include when(placeholder) {
         color: var(--y-select-placeholder-color);
       }
+    }
+
+    @include when(bordered) {
+      border: 1px solid var(--y-select-border-color);
     }
 
     @include when(focus) {
