--- a/packages/theme/src/modal.scss
+++ b/packages/theme/src/modal.scss
@@ -12,6 +12,7 @@
   left: 0;
   top: 0;
   overflow: visible;
+  pointer-events: none;
 
   @include e(body) {
     min-height: 100vh;
@@ -19,7 +20,8 @@
     position: relative;
     box-sizing: border-box;
     min-width: 100vw;
-    z-index: 99999; 
+    z-index: 99999;
+    pointer-events: none;
 
     @include m(content) {
       position: relative;
@@ -28,6 +30,7 @@
       font-size: var(--y-modal-font-size);
       color: var(--y-modal-text-color);
       background-color: var(--y-modal-bg-color);
+      pointer-events: all;
     }
 
     @include m(buttons) {
